--- a/about.html
+++ b/about.html
@@ -569,7 +569,7 @@ window.addEventListener('scroll', () => {
 });
 </script>
 <nav class="navbar">
-  <div class="logo" style="color: white; font-family: 'Zen Dots'; font-size: 1.5rem; padding: 10px;">NEXO</div>
+  <div class="logo" style="color: black; font-family: 'Zen Dots'; font-size: 0.5rem; padding: 10px;">NEXO</div>
 
     <input type="checkbox" id="menu-toggle">
 
@@ -689,3 +689,4 @@ navLinks.forEach(link => {
 
 </body>
 </html>
+
