--- a/about.html
+++ b/about.html
@@ -557,6 +557,9 @@ h4{
   z-index: 10000;
   transition: width 0.25s ease-out;
 }
+    .logo{
+        color: black;
+    }
 </style>
 <body>
 <div id="progress-bar"></div>
@@ -569,7 +572,7 @@ window.addEventListener('scroll', () => {
 });
 </script>
 <nav class="navbar">
-  <div class="logo" style="color: black; font-family: 'Zen Dots'; font-size: 0.5rem; padding: 10px;">NEXO</div>
+  <div class="logo">NEXO</div>
 
     <input type="checkbox" id="menu-toggle">
 
@@ -689,4 +692,5 @@ navLinks.forEach(link => {
 
 </body>
 </html>
+
 
